# pi2c-ms8-sniffer

./: .gitignore  Makefile  README.md  compare_logs.py  diff_logs.py  i2c_sniff_and_replay.py  ms8_send.py  ms8_sniff_replay.py  no_commands.txt  pyproject.toml  requirements.txt  setup.py  sniffer.py  volume_down.txt  volume_down_once.txt  volume_up.txt  volume_up_down.txt  volume_up_once.txt
pi2c_sniffer/: __init__.py  config.py  main.py  sniffer.py
