[project]
name = "pi2c-ms8-sniffer"
version = "1.0.0"
description = "I2C bus sniffer for Raspberry Pi using pigpio"
authors = [
    {name = "Kyle Humphrey"}
]
readme = "README.md"
requires-python = ">=3.6"
dependencies = [
    "pigpio>=1.78",
]

[project.scripts]
pi2c-sniffer = "pi2c_sniffer.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []
